--- a/skyfolk/static/css/core.css
+++ b/skyfolk/static/css/core.css
@@ -47,6 +47,20 @@ table {
   border-collapse: collapse;
   border-spacing: 0; }
 
+.input-field input[type=text]:focus + label {
+  color: #64b5f6 !important; }
+
+.input-field input[type=text]:focus {
+  border-bottom: 1px solid #64b5f6 !important;
+  box-shadow: 0 1px 0 0 #64b5f6 !important; }
+
+.input-field .active {
+  color: #64b5f6 !important; }
+
+.input-field textarea:focus {
+  border-bottom: 1px solid #64b5f6 !important;
+  box-shadow: 0 1px 0 0 #64b5f6 !important; }
+
 .container {
   *zoom: 1;
   max-width: 100%;
