--- a/skyfolk/templates/groups/card-group.html
+++ b/skyfolk/templates/groups/card-group.html
@@ -48,7 +48,7 @@
             </div>
             <div class="group-info center">
                 <br>
-                <p class="group-name"><b>{{ group_profile.name }}</b></p><br>
+                <p class="group-name">{% if not group_profile.is_public %}<i class="fa fa-lock" aria-hidden="true"></i> {% endif %}<b>{{ group_profile.name }}</b></p><br>
                 {% if group_profile.description != None %}
                     <p class="group-description">{{ group_profile.description }}</p><br><br>
                 {% endif %}
