--- a/skyfolk/static/css/core.css
+++ b/skyfolk/static/css/core.css
@@ -69,7 +69,8 @@ table {
 
 .autocomplete-me .ac-results .ac-result {
   text-decoration: none;
-  font-weight: 600; }
+  font-weight: 600;
+  color: #64B5F6 !important; }
   .autocomplete-me .ac-results .ac-result img {
     width: 60px;
     height: 60px;
