--- a/skyfolk/static/sass/core.sass
+++ b/skyfolk/static/sass/core.sass
@@ -75,6 +75,7 @@ table
 .autocomplete-me .ac-results .ac-result
   text-decoration: none
   font-weight: 600
+  color: #64B5F6 !important
   img
     width: 60px
     height: 60px
