--- a/skyfolk/templates/account/cf-profile.html
+++ b/skyfolk/templates/account/cf-profile.html
@@ -18,16 +18,16 @@ Template para la configuracion del perfil de usuario
 {% block cf-form %}
     <form class="avatar-form" method='post' accept-charset="utf-8" enctype='multipart/form-data' action='{% url 'user_profile:config_profile' %}'>{% csrf_token %}
         <div class="col l12 m12 s12 wrapper-profilex">
-            {% if node_profile.back_image %}
+            {% if user_profile.back_image %}
             <div class="col l12 m12 s12 profilex"
-                style="background: url('{{ node_profile.back_image }}') no-repeat center center; background-size: cover;">
+                style="background: url('{{ user_profile.back_image.url }}') no-repeat center center; background-size: cover;">
                 {% else %}
                 <div class="col l12 m12 s12 profilex"
                     style="background: url('{{ STATIC_URL }}dist/img/nuevo_back.png') no-repeat center center; background-size: cover;">
                     {% endif %}
                     <!-- Si el usuario tiene imagen, lo redireccionamos a change -->
                     <div id="avatar-profile" title="Imágen de perfil" class="img-profile"
-                        style="background-image: url({% avatar_url user_profile %}); background-repeat: no-repeat; background-position: center;
+                        style="background-image: url({% avatar_url request.user %}); background-repeat: no-repeat; background-position: center;
                         background-size: 100% 100%">
                         <a title="Eliminar imágenes de perfil" href="{% url 'avatar_delete' %}" class="delete-profile-image"><i
                                 class="fa fa-trash"></i></a>
@@ -107,7 +107,7 @@ Para evitar cadenas de texto muy largas (a la hora de mostrar el nombre del fich
 <script>
     $(document).ready(function () {
         $('#avatar-profile').on('click', function () {
-            {% if user_profile|has_avatar %}
+            {% if request.user|has_avatar %}
             window.location.href = "{% url 'avatar_change' %}";
             {% else %}
             window.location.href = "{% url 'avatar_add' %}";
