--- a/skyfolk/templates/account/like_entries.html
+++ b/skyfolk/templates/account/like_entries.html
@@ -8,16 +8,16 @@
             <div class="row">
                 <div class="col s12">
                     <div class="header">
-                        {% if item.back_image %}
-                            <img class="back-profile-user" src="{{ item.back_image }}">
+                        {% if item.profile.back_image %}
+                            <img class="back-profile-user" src="{{ item.profile.back_image.url }}">
                         {% else %}
                             <img class="back-profile-user" src="{{ STATIC_URL }}img/nuevo_back.png">
                         {% endif %}
                         <i class="fa fa-heart fa-2x like-him">
                         </i>
                         <div class="bg-user">
-                            <div onclick="location.href='/profile/{{ item.title }}'"
-                                 class="profile-user-bg">{% avatar item.title %}</div>
+                            <div onclick="location.href='/profile/{{ item.username }}'"
+                                 class="profile-user-bg">{% avatar item %}</div>
                         </div>
                     </div>
                 </div>
@@ -25,7 +25,7 @@
             <div class="row">
                 <div class="col s12">
                     <div class="name-friend">
-                        <a href="/profile/{{ item.title }}">@{{ item.title }} </a><br><br>
+                        <a href="/profile/{{ item.username }}">@{{ item.username }} </a><br><br>
                         <p>{{ item.first_name }} {{ item.last_name }}</p>
                     </div>
                 </div>
