--- a/skyfolk/templates/account/menu-vertical.html
+++ b/skyfolk/templates/account/menu-vertical.html
@@ -7,8 +7,8 @@
 <ul id="vertical-menu" class="side-nav">
     <li>
         <div class="userView">
-            {% if request.user.profile.backImage and request.user.profile.backImage|file_exists %}
-                <img class="background" src="{{ request.user.profile.backImage.url }}">
+            {% if request.user.profile.back_image %}
+                <img class="background" src="{{ request.user.profile.back_image.url }}">
             {% else %}
                 <img class="background" src="{{ STATIC_URL }}dist/img/nuevo_back.png">
             {% endif %}
