--- a/skyfolk/templates/groups/followers_page.html
+++ b/skyfolk/templates/groups/followers_page.html
@@ -8,8 +8,8 @@
             <div class="row">
                 <div class="col s12">
                     <div class="header">
-                        {% if item.user.profile.backImage and item.user.profile.backImage|file_exists %}
-                            <img class="back-profile-user" src="{{ MEDIA_URL }}{{ item.user.profile.backImage }}">
+                        {% if item.profile.back_image %}
+                            <img class="back-profile-user" src="{{ item.profile.back_image.url }}">
                         {% else %}
                             <img class="back-profile-user" src="{{ STATIC_URL }}img/nuevo_back.png">
                         {% endif %}
