--- a/skyfolk/templates/groups/user_list_page.html
+++ b/skyfolk/templates/groups/user_list_page.html
@@ -8,9 +8,9 @@
             <div class="row">
                 <div class="col s12">
                     <div class="header">
-                        {% if item.from_like__profile__backImage and item.from_like__profile__backImage|file_exists %}
+                        {% if item.from_like__profile__back_image %}
                             <img class="back-profile-user"
-                                 src="{{ MEDIA_URL }}{{ item.from_like__profile__backImage }}">
+                                 src="{{ MEDIA_URL }}{{ item.from_like__profile__back_image }}">
                         {% else %}
                             <img class="back-profile-user" src="{{ STATIC_URL }}img/nuevo_back.png">
                         {% endif %}
