--- a/skyfolk/static/sass/amigos.sass
+++ b/skyfolk/static/sass/amigos.sass
@@ -57,12 +57,11 @@ $tomatocolor: #ff6347
   border-color: $blueskyfolk
   opacity: 1
 
-.container .personal-card .header .like-him
+.container .personal-card .header .like-him, .container .personal-card .header .affinity
   position: relative
   margin-top: -30px
   float: right
   margin-right: 20px
-  background-color: $blueskyfolk
   color: $whitecolor
   border-radius: 100%
   width: 50px
@@ -71,6 +70,12 @@ $tomatocolor: #ff6347
   box-shadow: 0 5px 11px 0 rgba(0, 0, 0, 0.18), 0 4px 15px 0 rgba(0, 0, 0, 0.15)
   padding-top: 14px
   display: inline-block
+
+.container .personal-card .header .like-him
+  background-color: $blueskyfolk 
+
+.container .personal-card .header .affinity
+  background-color: tomato
 
 .container .personal-card .name-friend
   position: relative
