--- a/skyfolk/static/sass/news.sass
+++ b/skyfolk/static/sass/news.sass
@@ -47,3 +47,71 @@ html, body
       & .pub-date
         margin-top: 2%
         display: block
+
+.image-div
+  margin-bottom: 2.5%
+
+.container-image
+  background-color: $whitecolor
+  height: 400px
+  border-radius: 3px
+  box-shadow: $boxshadow
+  & .principal-content
+    display: block
+    height: 85%
+    width: 100%
+    position: relative
+    & img
+      width: 100%
+      height: 100%
+      border-radius: 3px
+      border-bottom: 2px solid #1e88e5
+    & .tags-content
+      position: absolute
+      padding: 10px
+      height: 50px
+      width: 100%
+      text-align: center
+      & blockquote
+        display: inline-block
+        color: $blueskyfolk
+        border-radius: 3px
+        background-color: rgba(255, 255, 255, 0.15)
+        transition: all .1s ease-in-out
+        padding: 10px
+        margin-top: 2%
+        &:hover
+          background-color: rgba(255, 255, 255, 1)
+  & .legend-content
+    height: 15%
+    padding: 5px
+    & .legend-user-image
+      width: 20%
+      height: 50px
+      display: inline-block
+      float: left
+      margin-right: 2%
+      & img
+        width: 100%
+        height: 100%
+        border-radius: 3px
+        box-shadow: $boxshadow
+    & .legend-user-data
+      & a
+        text-decoration: none
+        color: $blueskyfolk
+        font-weight: 600
+        display: block
+      & .photo-title
+        font-weight: 600
+        margin-top: 10px
+        display: block
+      & .photo-date
+        clear: both
+        display: block
+        margin-top: 1.5%
+        color: $graycolor
+      & blockquote
+        display: inline-block
+        padding: 10px
+
