--- a/skyfolk/templates/groups/followers.html
+++ b/skyfolk/templates/groups/followers.html
@@ -2,7 +2,7 @@
 {% comment %}
   Template para los seguidores de un perfil
 {% endcomment %}
-{% block title %} <title>Usuarios de </title> {% endblock %}
+{% block title %} <title>Usuarios de {{ group.name }}</title> {% endblock %}
 {% block extra-css %}
     <link type="text/css" rel="stylesheet" href="{{ STATIC_URL }}css/amigos.css" onload="if(media!='all')media='all'">
 {% endblock %}
@@ -15,15 +15,6 @@
                 </div>
             </div>
         </div>
+        {{ pagination|safe }}
     </div>
-    {% block js %}
-        {{ block.super }}
-        <script src="{{ STATIC_URL }}el-pagination/js/el-pagination.js"></script>
-        <script>
-            $.endlessPaginate({
-                paginateOnScroll: true,
-                paginateOnScrollMargin: 20
-            });
-        </script>
-    {% endblock %}
 {% endblock %}
