--- a/skyfolk/templates/groups/user_likes.html
+++ b/skyfolk/templates/groups/user_likes.html
@@ -1,29 +1,20 @@
 {% extends 'account/base_interface.html' %}
 {% comment %}
-  Template para los seguidores de un perfil
+Template para los seguidores de un perfil
 {% endcomment %}
-{% block title %} <title>Usuarios de </title> {% endblock %}
+{% block title %} <title>Usuarios de {{ group.name }}</title> {% endblock %}
 {% block extra-css %}
-    <link type="text/css" rel="stylesheet" href="{{ STATIC_URL }}css/amigos.css" onload="if(media!='all')media='all'">
+<link type="text/css" rel="stylesheet" href="{{ STATIC_URL }}css/amigos.css" onload="if(media!='all')media='all'">
 {% endblock %}
 {% block content %}
-    <div class="container">
-        <div class="row">
-            <div class="col l12 m10 s12 container-responsive">
-                <div class="row">
-                    {% include "groups/user_list_page.html" %}
-                </div>
+<div class="container">
+    <div class="row">
+        <div class="col l12 m10 s12 container-responsive">
+            <div class="row">
+                {% include "groups/user_list_page.html" %}
             </div>
         </div>
     </div>
-    {% block js %}
-        {{ block.super }}
-        <script src="{{ STATIC_URL }}el-pagination/js/el-pagination.js"></script>
-        <script>
-            $.endlessPaginate({
-                paginateOnScroll: true,
-                paginateOnScrollMargin: 20
-            });
-        </script>
-    {% endblock %}
+    {{ pagination|safe }}
+</div>
 {% endblock %}
